signup page misalignment fixed

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,6 +6,7 @@ body {
 }
 
 .footer {
+border-top: 1px solid white;
   color: white;
   box-sizing: border-box;
   padding-top: 60px;
