--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -1,27 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
-body {
+body{
   width: 100%;
   margin: 0px;
   padding: 0px;
   overflow: hidden;
+  box-sizing: border-box; 
+  height: 100vh;
 }
 
-.wrapper {
-  margin-top: 70px;
-  box-sizing: border-box;
-  height: 37.45%;
-  width: 50%;
+.outer--div{
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.signup--wrapper {
+  height: 37.45%;
+  width: 100%;
   background-color: white;
   border: 1px solid #6750a4;
 }
 
-h2 {
+.signup--h2 {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 600;
-  line-height: 20px;
+  line-height: 18px;
   letter-spacing: 0.10000000149011612px;
   text-align: center;
 }
@@ -38,40 +44,43 @@ h2 {
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
-  line-height: .5rem;
+  line-height: .4rem;
   letter-spacing: 0.10000000149011612px;
   text-align: center;
 }
 
 .signup--form {
   background-color: white;
-  margin-left: 7%;
-  margin-right: 8.25%;
   font-family: "Roboto", sans-serif;
-  font-size: 0.874rem;
+  font-size: 0.8rem;
   font-weight: 500;
   letter-spacing: 0.10000000149011612px;
   margin-top: 0px;
 }
-.signup--form input {
-  border: 0px;
+
+
+.signup--input--wrapper{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  border-bottom: 0.5px solid black;
+}
+
+.signup--input {
+  border: 0;
+  margin-top: 10px;
   outline: none;
   font-family: "Roboto", sans-serif;
   font-size: 0.875rem;
   font-weight: 500;
   letter-spacing: 0.10000000149011612px;
-  padding-top: 1.25rem;
-}
-
-p {
-  text-align: center;
+  margin-bottom: 0px;
 }
 
 .signup--vectors {
   height: 18px;
   width: 18px;
-  padding-left: 19px;
-  margin-right: 8px;
+  margin-top: 15px;
 }
 
 .signup--submit {
@@ -91,5 +100,12 @@ p {
 .password--toggle{
   height: 18px;
   width: 18px;
-  margin-left: 49%;
+  margin-left: 10%;
+  margin-top: 15px;
+}
+
+.signup--error{
+  color: red;
+  text-align: center;
+  font-weight: 600;
 }
